# chimera

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
db/: chroma.sqlite3
src/chimera/: crew.py  crew_llamaindex.py  main.py
src/chimera/config/: agents.yaml  tasks.yaml
src/chimera/templates/: linkedin_post_preview.html
src/chimera/tools/: chunk_tool.py  dalle_tool.py  duckduckgo_tool.py  qdrant_tool.py
src/chimera/utils/: memory_config.py  qdrant_test.py  storage_config.py  storage_qdrant.py  utils.py
