[project]
name = "chimera"
version = "0.0.1"
description = "chimera using crewAI"
authors = [{ name = "Nicola Procopio", email = "nicola.procopio@acsoftware.it" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core app and tools
    "crewai[tools]>=0.98.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",

    # Qdrant client with FastEmbed support
    "qdrant-client[fastembed]==1.14.2",

    # LlamaIndex modular packages used in code
    "llama-index-core>=0.10.0",
    "llama-index-llms-ollama>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-vector-stores-qdrant>=0.2.0",

    # UI and testing
    "panel==1.6.0",
    "pytest==8.2.1",

    # Document parsing and language tooling
    "pymupdf==1.25.3",          # import fitz from PyMuPDF; no separate 'fitz' package
    "esprima==4.0.1",
    "tree-sitter==0.24.0",
    "tree-sitter-languages==1.10.2",
    "javalang",

    # Utilities
    "wget",
    "duckduckgo-search==8.1.1",
    "ddgs",

    # Optional providers
    "google-generativeai==0.8.4",
    "groq==0.25.0",
]

[project.scripts]
# Use main() as the entry point (run via `python -m chimera.main` or these console scripts)
chimera = "chimera.main:main"
run_crew = "chimera.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ensure src-layout packages are discovered correctly when building
[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.crewai]
type = "crew"